RESOLVED FIXED54780
pendingAPIRequestURL isn't updated for WKPageGoToBackForwardListItem
https://bugs.webkit.org/show_bug.cgi?id=54780
Summary pendingAPIRequestURL isn't updated for WKPageGoToBackForwardListItem
John Sullivan
Reported 2011-02-18 16:34:51 PST
If a client calls WKPageGoToBackForwardListItem, and then WKPageCopyPendingAPIRequestURL, the resulting URL is null. It should be the URL of the back/forward item. This is an oversight from when this feature was recently added.
Attachments
Patch that adds the missing call. (566 bytes, patch)
2011-02-18 16:43 PST, John Sullivan
mjs: review+
John Sullivan
Comment 1 2011-02-18 16:43:06 PST
Created attachment 83033 [details] Patch that adds the missing call.
Maciej Stachowiak
Comment 2 2011-02-18 16:47:33 PST
Comment on attachment 83033 [details] Patch that adds the missing call. r=me
John Sullivan
Comment 3 2011-02-18 16:49:45 PST
Checked in as r79050.
Note You need to log in before you can comment on or make changes to this bug.