<rdar://problem/9026169> https://bugs.webkit.org/show_bug.cgi?id=54780 pendingAPIRequestURL isn't updated for WKPageGoToBackForwardListItem

Reviewed by Maciej Stachowiak.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::goToBackForwardItem):
Update the pending API URL.



git-svn-id: svn://svn.chromium.org/blink/trunk@79050 bbb929c8-8fbe-4397-9dbb-9b2b20218538